# snapfix

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  check_health.py  debug_snapfix.py  final_test.py  list_models.py  test_error.py  test_model.py  verify_pylogai.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
snapfix-backend/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  pyproject.toml
snapfix-backend/.github/workflows/: ci.yml
snapfix-backend/snapfix/: __init__.py  __main__.py  cli.py  config.py  constants.py  server.py
snapfix-backend/snapfix/db/: __init__.py  cache.py  models.py
snapfix-backend/snapfix/llm/: __init__.py  handler.py  prompts.py
snapfix-backend/snapfix/parser/: __init__.py  frameworks.py  traceback.py
snapfix-backend/tests/: __init__.py  test_llm.py  test_parser.py
snapfix-backend/tests/fixtures/: django_does_not_exist.txt  fastapi_value_error.txt  flask_key_error.txt  plain_index_error.txt  plain_zero_division.txt
snapfix-vscode/: .eslintrc.js  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
snapfix-vscode/src/: extension.ts  httpClient.ts  serverManager.ts  sidePanel.ts  terminalWatcher.ts  tracebackDetector.ts
snapfix-vscode/webview/: index.html  styles.css
