[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapfix"
version = "0.2.0"
description = "Snapfix: AI-powered Python error analyzer engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Snapfix Contributors" }]
keywords = ["debugging", "logging", "ai", "python", "vscode", "llm", "snapfix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "litellm>=1.35.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "aiofiles>=23.2.0",
    "toml>=0.10.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.3.0",
    "mypy>=1.9.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
snapfix = "snapfix.cli:app"

[project.urls]
Homepage = "https://github.com/Dronzer7905/snapfix"
Repository = "https://github.com/Dronzer7905/snapfix"
Issues = "https://github.com/Dronzer7905/snapfix/issues"

[tool.hatch.build.targets.wheel]
packages = ["snapfix"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "W", "F", "I", "N", "UP", "ANN", "B", "C4", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN", "S101"]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
